--- a/foundry.toml
+++ b/foundry.toml
@@ -15,6 +15,7 @@ libraries = []
 cache = true
 force = false
 evm_version = 'london'
+gas_reports = ["*"]
 auto_detect_solc = true
 optimizer = true
 optimizer_runs = 200
