--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,21 @@ jobs:
       - name: Install dependencies
         run: forge install
       - name: Run tests
+        run: FOUNDRY_PROFILE=CI forge test -vvv
+      - name: Generate coverage
         run: forge test -vvv
+  coverage_report:
+    name: Generate coverage report
+    needs: testing
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    # ... Generate LCOV files or download it from a different job
+    - name: Report code coverage
+      uses: dethereum/github-actions-report-lcov@v1.0.0
+      with:
+        coverage-files: ./lcov.info
+        minimum-coverage: 90
+        artifact-name: code-coverage-report
+        github-token: ${{ secrets.GITHUB_TOKEN }}
