--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,14 +18,14 @@ jobs:
       - name: Install dependencies
         run: forge install
       - name: Run tests
-        run: FOUNDRY_PROFILE=CI forge test -vvv
+        run: forge test -vvv
       - name: Generate coverage
         run: forge coverage
       - name: Checkout code
         uses: actions/checkout@v2
       # ... Generate LCOV files or download it from a different job
       - name: Report code coverage
-        uses: dethereum/github-actions-report-lcov@v1.0.0
+        uses: uses: zgosalvez/github-actions-report-lcov@v1
         with:
           coverage-files: ./lcov.info
           minimum-coverage: 90
