--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v2
       # ... Generate LCOV files or download it from a different job
       - name: Report code coverage
-        uses: uses: zgosalvez/github-actions-report-lcov@v1
+        uses: zgosalvez/github-actions-report-lcov@v1
         with:
           coverage-files: ./lcov.info
           minimum-coverage: 90
