--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,11 @@ jobs:
         run: forge test -vvv
       - name: Generate coverage
         run: forge coverage --report lcov
+      - name: Filter lcov
+        run: lcov -r lcov.info "test/*" -o lcov-filtered.info
       - name: Report code coverage
         uses: zgosalvez/github-actions-report-lcov@v1
         with:
-          coverage-files: ./lcov.info
+          coverage-files: ./lcov-filtered.info
           artifact-name: code-coverage-report
           github-token: ${{ secrets.GITHUB_TOKEN }}
