--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
         run: forge test -vvv
       - name: Generate coverage
         run: forge coverage --report lcov
+      - name: Setup LCOV
+        uses: hrishikesh-kadam/setup-lcov@v1
       - name: Filter lcov
         run: lcov -r lcov.info "test/*" -o lcov-filtered.info
       - name: Report code coverage
