--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,15 @@ jobs:
         run: forge install
       - name: Run tests
         run: forge test -vvv
+      - name: Generate coverage
+        run: forge coverage --report lcov
+      - name: Setup LCOV
+        uses: hrishikesh-kadam/setup-lcov@v1
+      - name: Filter lcov
+        run: lcov -r lcov.info "test/*" -o lcov-filtered.info
+      - name: Report code coverage
+        uses: zgosalvez/github-actions-report-lcov@v1
+        with:
+          coverage-files: ./lcov-filtered.info
+          artifact-name: code-coverage-report
+          github-token: ${{ secrets.GITHUB_TOKEN }}
