--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,31 +6,31 @@ jobs:
     name: Foundry project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
+      # - uses: actions/checkout@v2
+      #   with:
+      #     submodules: recursive
 
-      - name: Install Foundry
-        uses: onbjerg/foundry-toolchain@v1
-        with:
-          version: nightly
+      # - name: Install Foundry
+      #   uses: onbjerg/foundry-toolchain@v1
+      #   with:
+      #     version: nightly
 
-      - name: Install dependencies
-        run: forge install
-      - name: Run tests
-        run: forge test -vvv
-      - name: Generate coverage
-        run: forge coverage --report lcov
-      - name: Setup LCOV
-        uses: hrishikesh-kadam/setup-lcov@v1
-      - name: Filter lcov
-        run: lcov -r lcov.info "test/*" -o lcov-filtered.info --rc lcov_branch_coverage=1
-      - name: Report code coverage
-        uses: zgosalvez/github-actions-report-lcov@v1
-        with:
-          coverage-files: ./lcov-filtered.info
-          artifact-name: code-coverage-report
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Install dependencies
+      #   run: forge install
+      # - name: Run tests
+      #   run: forge test -vvv
+      # - name: Generate coverage
+      #   run: forge coverage --report lcov
+      # - name: Setup LCOV
+      #   uses: hrishikesh-kadam/setup-lcov@v1
+      # - name: Filter lcov
+      #   run: lcov -r lcov.info "test/*" -o lcov-filtered.info --rc lcov_branch_coverage=1
+      # - name: Report code coverage
+      #   uses: zgosalvez/github-actions-report-lcov@v1
+      #   with:
+      #     coverage-files: ./lcov-filtered.info
+      #     artifact-name: code-coverage-report
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/checkout@v3
       - name: Run Slither
@@ -38,7 +38,8 @@ jobs:
         with:
           sarif: results.sarif
           fail-on: none
-          slither-args: . --compile-force-framework foundry --filter-path "./test|./lib/forge-std|./lib/solmate" --exclude timestamp,solc-version --exclude-low
+          target: '.'
+          slither-args: --compile-force-framework foundry --filter-path "./test|./lib/forge-std|./lib/solmate" --exclude timestamp,solc-version --exclude-low
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
         with:
