--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
 
       - name: Install dependencies
         run: forge install
+      - name: Build
+        run: forge build --sizes
       - name: Run tests
         run: forge test -vvv
       - name: Generate coverage
@@ -31,3 +33,15 @@ jobs:
           coverage-files: ./lcov-filtered.info
           artifact-name: code-coverage-report
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v3
+      - name: Run Slither
+        uses: crytic/slither-action@v0.2.0
+        with:
+          sarif: results.sarif
+          fail-on: none
+          target: '.'
+          slither-args: --compile-force-framework foundry --filter-path "./test|./lib/forge-std|./lib/solmate" --exclude timestamp,solc-version,naming-convention,assembly
+      # - name: Upload SARIF file
+      #   uses: github/codeql-action/upload-sarif@v2
+      #   with:
+      #     sarif_file: ${{ steps.slither.outputs.sarif }}
